<resources>

    <string name="app_name">MexApp</string>
    <string name="login_name">MexApp</string>
<string name="version_name">App_5.0.67</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Reintentar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pruebas">PruebasActivity</string>
    <string name="title_activity_consultar_horas">Consultar Horas</string>
    <string name="title_activity_l__sueno">Módulo de Sueño</string>


    <string name="hello_world">Hello world!</string>
    <string name="start_note">Start Notification</string>
    <string name="cancel_note">Cancel Notification</string>
    <string name="update_note">Update Notification</string>


    <string name="item_principal_1">En Proceso</string>
    <string name="item_principal_2">Cerradas</string>
    <string name="item_principal_3">Recogidos</string>

    <!-- poner en la lista donde se consultaran todos los pedidos
    <string name="item_principal_4">Cerrados</string>
-->
    <string name="item_1">Esta Semana</string>
    <string name="item_2">Todos</string>
    <string name="item_3">Catálogo</string>
    <string name="item_4">Cotizaciones</string>
    <string name="item_5">Existencias</string>
    <string name="item_6">b</string>

    <!--menu izquierdo-->
    <string name="mi_procesos">Procesos</string>
    <string name="mi_procesos_sueno">Sueño</string>
    <string name="mi_procesos_eviencia">Evidencias</string>
    <string name="mi_procesos_existencias">Notificaciones</string>
    <string name="mi_procesos_viajes">Viajes</string>
    <string name="mi_procesos_bitacora">Bitacora</string>


    <string name="mi_catalogos">Catálogos</string>
    <string name="mi_catalogo_cliente">Clientes</string>
    <string name="mi_catalogo_precio">Precios</string>
    <string name="mi_catalogo_inflables">Inflables</string>

    <string name="mi_seguimiento">Seguimiento Pedidos</string>
    <string name="mi_seguimiento_semana">Esta semana</string>
    <string name="mi_seguimiento_todos">Todos</string>


    <!-- de caja    -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_new">+</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>


    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_agregar_producto">AgregarProductoActivity</string>
    <string name="title_activity_catalogo">CatalogoActivity</string>
    <string name="title_activity_map_view">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>


    <!--Tabs Viajes-->
    <string name="tab_viaje_curso">Actual</string>
    <string name="tab_viaje_histrico">Bitacora</string>
    <string name="title_activity_bitacora">Norma NO 87</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_viajes_base">ViajesBase</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
